# oxidux

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  README.md  _wildcard.test-key.pem  _wildcard.test.pem  apps.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: oxidux.plist  oxidux.service  oxidux.socket
pkg/brew/: oxidux.rb
src/: .process_manager.rs.rustfmt  app.rs  client.rs  config.rs  dns.rs  host_resolver.rs  ipc_command.rs  ipc_listener.rs  ipc_response.rs  lib.rs  main.rs  output.rs  process.rs  process_manager.rs  procfile.rs  proxy.rs  setup.rs  signals.rs  tmux.rs
src/proxy/: autostart_response.rs  host_missing.rs  launchd.rs  meta_server.rs  tls.rs
src/setup/: linux.rs  macos.rs
static/: restart_response.html
tests/: proxy_test.rs
tests/helpers/: echo_server.rs  test_utils.rs
