[package]
name = "oxidux"
description = "Reverse proxy and process manager for web app development."
version = "0.4.1-alpha.0"
authors = ["Jonathan Mast <jon@jonmast.com>"]
license = "GPL-3.0-or-later"
edition="2018"
default-run = "oxidux"

[package.metadata.release]
sign-commit = true
sign-tag = true

[dependencies]
futures = "0.3.12"
tokio = { version = "1.2.0", features = ["full"] }
hyper = { version = "0.14.4", features = ["full"] }
url = "2.2.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
nix = "0.19"
dirs = "3.0"
ansi_term = "0.12"
eyre = "0.6.5"
shellexpand = "2.1"
listenfd = "0.3.3"
libc = "0.2"
once_cell = "1.7.1"
color-eyre = "0.5.1"
async-stream = "0.3.0"

[[bin]]
name = "echo-server"
path = "tests/helpers/echo_server.rs"

[target.'cfg(target_os = "macos")'.dependencies]
trust-dns-server = "0.20.0"

[dev-dependencies]
rand = "0.8.3"
